--- a/rumeter-component/Cargo.toml
+++ b/rumeter-component/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Liudao <jimmyseraph@testops.vip>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/jimmyseraph/rumeter"
-homepage = "https://github.com/jimmyseraph/rumeter"
+homepage = "https://github.com/jimmyseraph/rumetercar"
 description = """
 A load test platform for writing a load test script by rust.
 Just like JMeter, but it prefer using like SDK, not a GUI tool.
@@ -21,7 +21,6 @@ keywords = ["io", "async", "non-blocking", "load-test"]
 slab = "0.4.6"
 serde_json = "1.0.81"
 tracing = "0.1.34"
-async-recursion = "1.0.0"
 futures = "0.3.21"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
