--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -12,7 +12,13 @@ tokio = { version = "1", features = ["full"] }
 tracing = "0.1.34"
 tracing-subscriber = "0.3.11"
 async-trait = "0.1.53"
+serde = {version = "1.0.137", features = ["derive"]}
+serde_json = "1.0.81"
 
 [[example]]
 name = "http_get"
 path = "http_get.rs"
+
+[[example]]
+name = "gql"
+path = "gql.rs"
