--- a/rumeter-component/Cargo.toml
+++ b/rumeter-component/Cargo.toml
@@ -19,6 +19,7 @@ keywords = ["io", "async", "non-blocking", "load-test"]
 
 [dependencies]
 slab = "0.4.6"
+serde = {version = "1.0.137", features = ["derive"]}
 serde_json = "1.0.81"
 tracing = "0.1.34"
 futures = "0.3.21"
