--- a/rumeter/Cargo.toml
+++ b/rumeter/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "rumeter"
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
+authors = ["Liudao <jimmyseraph@testops.vip>"]
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
